<resources>
    <string name="app_name">ControlFinancieroCamera</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_camera">Movimientos</string>
    <string name="menu_gallery">Cámara</string>
    <string name="menu_tools">Configuración</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_send">Enviar</string>
    <string name="menu_group">Groupo</string>
    <string name="copyright">© Dispositivos móviles</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment genérico</string>
    <string name="tipo_gasto">Tipo</string>
    <string name="monto">Monto</string>
    <string name="fecha">Fecha</string>
    <string name="upload_photo">Subir foto</string>
    <string name="agregar_transaccion">Agregar Transaccion</string>
    <string name="guardar">Guardar</string>
    <string name="volver">Volver</string>
</resources>